syntax = "proto3";


import "google/protobuf/timestamp.proto";
package services;
option go_package="./services";

service Calculator {
    rpc Hello (HelloRequest) returns (HelloResponse);
    rpc Fibonacci (FibonacciRequest) returns (stream FibonacciResponse);
}

message HelloRequest {
    string name = 1;
    google.protobuf.Timestamp created_date = 2;
}

message HelloResponse {
    string result = 1;
}

message FibonacciRequest {
   uint32 n = 1;
}

message FibonacciResponse {
    uint32 result = 1;
}